--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,24 @@
 {
-  "name": "Next.js Notion Starter Kit",
-  "short_name": "Starter Kit",
-  "icons": [
-    {
-      "src": "/favicon.png",
-      "type": "image/png",
-      "sizes": "32x32"
-    },
-    {
-      "src": "/favicon-128x128.png",
-      "type": "image/png",
-      "sizes": "128x128"
-    },
-    {
-      "src": "/favicon-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    }
-  ],
-  "theme_color": "#000000",
-  "background_color": "#000000",
-  "display": "standalone"
+    "name": "佐用 貴歩",
+    "short_name": "佐用 貴歩",
+    "description": "佐用貴歩のデジタル名刺",
+    "start_url": "/",
+    "display": "standalone",
+    "lang": "ja",
+    "dir": "auto",
+    "orientation": "any",
+    "theme_color": "#ffffff",
+    "background_color": "#ffffff",
+    "icons": [
+        {
+            "src": "/logo192.png",
+            "type": "image/png",
+            "sizes": "192x192"
+        },
+        {
+            "src": "/logo512.png",
+            "type": "image/png",
+            "sizes": "512x512"
+        }
+    ]
 }
